--- a/html/entry1.html
+++ b/html/entry1.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-	<!--<link rel="stylesheet" href="style.css" type="text/css" />-->
 </head>
 
 <body>
+	<img src="{image}" />
 	<div class="dream">
 		{content}
 	</div>
