Improved dream images in PDF

--- a/html/entry1.html
+++ b/html/entry1.html
@@ -4,7 +4,8 @@
 </head>
 
 <body>
-	<img src="{image}" />
+	<img class="dream-img-med" src="{image}" />
+    <br><br>
 	<div class="dream">
 		{content}
 	</div>
