--- a/html/entry1.html
+++ b/html/entry1.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-	<img class="dream-img-med" src="{image}" />
+	<img class="dream-img-med dream-img-left" src="{image}" />
     <br><br>
 	<div class="dream">
 		{content}
