--- a/html/cover.html
+++ b/html/cover.html
@@ -9,5 +9,7 @@
     <h1 class="title">Dream Journal</h1><br>
     <h4 class="subtitle">Composed on {date}</h4>
 
+	<div class="centered"><img class="dream-img-med" src="{image}" /></div>
+
 </body>
 </html>
