--- a/html/cover.html
+++ b/html/cover.html
@@ -7,9 +7,8 @@
 <body>
 
     <h1 class="title">Dream Journal</h1><br>
+	<div class="centered"><img class="dream-img-med cover-photo" src="{image}" /></div>
     <h4 class="subtitle">Composed on {date}</h4>
-
-	<div class="centered"><img class="dream-img-med" src="{image}" /></div>
 
 </body>
 </html>
